use path from pathmanager